--- a/api/package.json
+++ b/api/package.json
@@ -43,12 +43,13 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "esbuild": "^0.20.1",
-    "prisma": "^5.15.0",
     "esbuild-register": "^3.5.0",
     "eslint": "^8.57.0",
-    "ts-node": "^10.9.2",
     "nodemon": "^3.1.0",
+    "prisma": "^5.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
