--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node -r esbuild-register ./src/index.ts",
-    "dev": "npm run db:generate & nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts ",
+    "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
     "lint": "eslint . --ext .ts,.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
