--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -8,7 +8,7 @@
     "noImplicitAny": false,
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
