--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "**/*.{ts,tsx,js,jsx,json,html}": ["npm run format:fix"]
+  "**/*.{ts,tsx,js,jsx,json,html}": ["npm run format:fix", "npm run lint"]
 }
