--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.441.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
