add:footer,fix: css

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,11 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
+  "printWidth": 80,
+  "useTabs": false,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "jsxSingleQuote": false,
   "plugins": [
     "prettier-plugin-tailwindcss"
   ]
