--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -21,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
