--- a/package.json
+++ b/package.json
@@ -5,21 +5,18 @@
     "build": "npm run build:api && npm run build:web",
     "build:api": "cd api && npm run build",
     "build:web": "cd web && npm run build",
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\" \"npm run dev:test\"",
+    "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\"",
     "dev:api": "cd api && npm run dev",
     "dev:web": "cd web && npm run dev",
-    "dev:test": "cd test && npm run dev",
-    "lint": "npm run lint:api && npm run lint:web && npm run lint:test",
+    "lint": "npm run lint:api && npm run lint:web",
     "lint:api": "cd api && npm run lint",
     "lint:web": "cd web && npm run lint",
-    "lint:test": "cd test && npm run lint",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,html}\"",
     "format:fix": "prettier --write \"**/*.{ts,tsx,js,jsx,html}\"",
     "prepare": "husky",
     "install:api": "cd api && npm install",
     "install:web": "cd web && npm install",
-    "install:test": "cd test && npm install",
-    "postinstall": "npm run install:api && npm run install:web && npm run install:test"
+    "postinstall": "npm run install:api && npm run install:web"
   },
   "devDependencies": {
     "concurrently": "^8.0.0",
