--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
