--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.7.0",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
