--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "private": "true",
   "scripts": {
     "build": "tsc",
-    "start": "node -r esbuild-register ./src/index.ts",
-    "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'node -r esbuild-register ./src/index.ts' -ext .ts",
     "lint": "eslint . --ext .ts,.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
@@ -23,6 +23,7 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-rate-limit": "^7.4.1",
