--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tag: yshplsngh/testimonial:latest
+          tag: yshplsngh/testimonial:check2
           
