--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to Docker hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build and push docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tag: yshplsngh/testimonial:check2
+          tags: yshplsngh/testimonial:check2
           
