--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,5 @@ jobs:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tags: yshplsngh/testimonial:check2
+          tags: yshplsngh/testimonial:latest
           
