--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
   app:
     container_name: backend
-    image: yshplsngh/testimonial:check
+    image: yshplsngh/testimonial:latest
     ports:
       - "4000:4000"
     environment:
@@ -28,8 +26,6 @@ services:
       POSTGRES_DB: testimonial
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       - testimonial_network
     healthcheck:
@@ -41,8 +37,6 @@ services:
   redis:
     container_name: redis
     image: redis:7-alpine
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
