--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,17 @@ jobs:
           file: ./api/Dockerfile
           push: true
           tags: yshplsngh/testimonial:latest
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{secrets.SSH_HOST}}
+          username: ${{secrets.SSH_USERNAME}}
+          key: ${{secrets.SSH_KEY}}
+          script: |
+            sudo docker pull 100xdevs/week-18-class:latest
+            sudo docker stop web-server || true
+            sudo docker rm web-server || true
+            sudo docker run -d --name web-server -p 4000:3000 100xdevs/week-18-class:latest
+            
           
