--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,8 @@ jobs:
           key: ${{secrets.SSH_KEY}}
           port: 22
           script: |
-            sudo docker pull 100xdevs/week-18-class:latest
-            sudo docker stop web-server || true
-            sudo docker rm web-server || true
-            sudo docker run -d --name web-server -p 4000:3000 100xdevs/week-18-class:latest
+            sudo docker stop backend || true
+            sudo docker rm backend || true
+            sudo docker compose up -d
             
           
