fix: table migration issue

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -15,4 +15,4 @@ RUN npm run build
 
 EXPOSE 4000
 
-CMD ["sh", "-c", "npm run start"]
+CMD ["sh", "-c", "npx prisma migrate deploy && npm run start"]
