--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'node -r esbuild-register ./src/index.ts' -ext .ts",
+    "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
     "lint": "eslint . --ext .ts,.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
