--- a/web/package.json
+++ b/web/package.json
@@ -20,11 +20,13 @@
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.26.2",
+    "react-syntax-highlighter": "^15.6.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8"
@@ -33,6 +35,7 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
