--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "npm run install:api && npm run install:web"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "concurrently": "^8.0.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
