--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-icons": "^1.3.2"
   }
 }
