--- a/api/package.json
+++ b/api/package.json
@@ -7,11 +7,11 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
     "lint": "eslint . --ext .ts,.js",
-    "db:generate": "prisma generate",
+    "db:gen": "prisma generate",
     "db:push": "prisma db push --skip-generate",
-    "db:migrate": "prisma migrate dev",
+    "db:mig": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
-    "db:studio": "prisma studio",
+    "db:std": "prisma studio",
     "db:seed": "ts-node prisma/seed.ts"
   },
   "prisma": {
