--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           key: ${{secrets.SSH_KEY}}
           port: 22
           script: |
-            sudo docker stop backend || true
-            sudo docker rm backend || true
+            sudo docker stop testimonial || true
+            sudo docker rm testimonial || true
             sudo docker rmi yshplsngh/testimonial:latest --force || true
             sudo docker run --name testimonial -d -p 4000:4000 -e DATABASE_URL=${{secrets.DB_URL}} -e CLIENT_ID=${{secrets.GOOGLE_CLIENT_ID}} -e CLIENT_SECRET=${{secrets.GOOGLE_CLIENT_SECRET}} yshplsngh/testimonial:latest
