--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,14 +5,16 @@ FROM node:20 AS builder
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci --omit=dev
+COPY tsconfig.json ./
+RUN npm ci
 
 COPY prisma ./prisma
 RUN npm run db:gen
 
-COPY tsconfig.json ./
 COPY src ./src
 RUN npm run build
+
+RUN npm prune --production
 
 
 # Stage 2: Production Environment
