fix prisma error

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -23,6 +23,8 @@ FROM node:20-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y openssl
+
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 
